--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "PWA",
     "TopLearn"
   ],
-  "author": "Iman Madaeny",
+  "author": "Seyedmansour Mohammadi",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
