--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": " PWA Note",
-  "short_name": "PWANote",
+  "name": " Prediction For Abadan city",
+  "short_name": "PrAbadanCity",
   "description": "An offline-approach personal note application to show we love PWA.",
   "background_color": "#fff",
   "theme_color": "#3f51b5",
