--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": " Prediction For Abadan city",
+  "name": "Abadan city",
   "short_name": "PrAbadanCity",
   "description": "An offline-approach personal note application to show we love PWA.",
   "background_color": "#fff",
